route-pattern/src/snapshots/route_pattern__nom_parser__tests__bad_parens_balance-2.snap
---
source: route-pattern/src/nom_parser.rs
expression: "parse(\"foobar<yo>>\", '<', '>').finish().map(serialize).unwrap()"
---
- "remaining:[]"
- - "text:foobar"
  - "regex:yo"
  - "text:>"

