route-pattern/src/snapshots/route_pattern__nom_parser__tests__empty.snap
---
source: src/nom_parser.rs
expression: "parse(\"\", '<', '>').finish().map(serialize).unwrap()"
---
- "remaining:[]"
- []

