route-pattern/src/snapshots/route_pattern__nom_parser__tests__empty_parens.snap
---
source: src/nom_parser.rs
expression: "parse(\"foobar<>\", '<', '>').finish().map(serialize).unwrap()"
---
- "remaining:[]"
- - "text:foobar"
  - "regex:"

